--- a/app/src/main/res/layout/fragment_telefon_kodu_gir.xml
+++ b/app/src/main/res/layout/fragment_telefon_kodu_gir.xml
@@ -76,4 +76,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/onayKodu" />
 
+    <ProgressBar
+        android:id="@+id/pbTelNoOnayla"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnTamam" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
