--- a/app/src/main/res/layout/fragment_kayit.xml
+++ b/app/src/main/res/layout/fragment_kayit.xml
@@ -62,8 +62,8 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="Kullanıcı Adı"
-        android:background="@drawable/register_edit_text"
         android:padding="15dp"
+        android:background="@drawable/register_edit_text"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,7 @@
         android:text="GİRİŞ"
         android:enabled="false"
         android:textAllCaps="false"
-        android:textColor="@color/siyah"
+        android:textColor="@color/mavi"
         android:background="@color/beyaz"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
