--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,37 +6,48 @@
     android:layout_height="match_parent"
     tools:context=".Login.LoginActivity">
 
+    <ImageView
+        android:id="@+id/imgLogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="120dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_launcher_foreground"
+        tools:ignore="VectorDrawableCompat" />
+
     <EditText
-        android:id="@+id/etEmailTelefonUsername"
+        android:id="@+id/etEmailTelorKullaniciAdi"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/register_edit_text"
         android:ems="10"
         android:hint="Telefon Numarası,Email veya Kullanıcı Adı"
         android:inputType="textPersonName"
-        android:background="@drawable/register_edit_text"
         android:padding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
 
     <EditText
-        android:id="@+id/etSifre"
+        android:id="@+id/etSifree"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="Şifre"
-        android:background="@drawable/register_edit_text"
-        android:padding="15dp"
-        android:inputType="textPassword"
+        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEmailTelefonUsername" />
+        android:padding="15dp"
+        android:background="@drawable/register_edit_text"
+        app:layout_constraintTop_toBottomOf="@+id/etEmailTelorKullaniciAdi" />
 
     <Button
         android:id="@+id/btnGirisYap"
@@ -47,12 +58,12 @@
         android:layout_marginEnd="16dp"
         android:background="@color/beyaz"
         android:enabled="false"
-        android:text="Giriş Yap"
+        android:text="GİRİŞ YAP"
         android:textAllCaps="false"
-        android:textColor="@color/siyah"
+        android:textColor="@color/mavi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etSifre" />
+        app:layout_constraintTop_toBottomOf="@+id/etSifree" />
     <View
         android:id="@+id/golgelik1"
         android:layout_width="0dp"
@@ -71,19 +82,26 @@
     </View>
 
     <TextView
+        android:id="@+id/textView16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Hesabın yok mu?"
+        app:layout_constraintEnd_toStartOf="@+id/tvGirisYap"
+        app:layout_constraintHorizontal_bias="0.883"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/golgelik1" />
+
+    <TextView
         android:id="@+id/tvGirisYap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="185dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="184dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="140dp"
         android:text="Kaydol"
-        android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/golgelik1"
-        app:layout_constraintVertical_bias="0.812" />
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
