--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -64,7 +64,7 @@
             tools:ignore="MissingConstraints" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tvTakipciSayisi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -72,13 +72,13 @@
             android:textColor="@color/siyah"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/textView4"
+            app:layout_constraintEnd_toStartOf="@+id/tvTakipSayisi"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
+            app:layout_constraintStart_toEndOf="@+id/tvGönderiSayisi"
             app:layout_constraintTop_toTopOf="@+id/circleProfileImage" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/tvTakipSayisi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -88,11 +88,11 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintStart_toEndOf="@+id/tvTakipciSayisi"
             app:layout_constraintTop_toTopOf="@+id/circleProfileImage" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tvGönderiSayisi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -100,7 +100,7 @@
             android:textColor="@color/siyah"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/textView3"
+            app:layout_constraintEnd_toStartOf="@+id/tvTakipciSayisi"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/circleProfileImage"
             app:layout_constraintTop_toTopOf="@+id/circleProfileImage" />
@@ -111,9 +111,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="Gönderi"
-            app:layout_constraintEnd_toEndOf="@+id/textView2"
-            app:layout_constraintStart_toStartOf="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintEnd_toEndOf="@+id/tvGönderiSayisi"
+            app:layout_constraintStart_toStartOf="@+id/tvGönderiSayisi"
+            app:layout_constraintTop_toBottomOf="@+id/tvGönderiSayisi" />
 
         <TextView
             android:id="@+id/textView8"
@@ -121,9 +121,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="Takipçi"
-            app:layout_constraintEnd_toEndOf="@+id/textView3"
-            app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintEnd_toEndOf="@+id/tvTakipciSayisi"
+            app:layout_constraintStart_toStartOf="@+id/tvTakipciSayisi"
+            app:layout_constraintTop_toBottomOf="@+id/tvTakipciSayisi" />
 
         <TextView
             android:id="@+id/textView9"
@@ -131,9 +131,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="Takip Edilen"
-            app:layout_constraintEnd_toEndOf="@+id/textView4"
-            app:layout_constraintStart_toStartOf="@+id/textView4"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintEnd_toEndOf="@+id/tvTakipSayisi"
+            app:layout_constraintStart_toStartOf="@+id/tvTakipSayisi"
+            app:layout_constraintTop_toBottomOf="@+id/tvTakipSayisi" />
 
         <TextView
             android:id="@+id/profillDüzenleButon"
@@ -172,11 +172,11 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
             android:layout_marginTop="4dp"
             android:text="kütahya Dumlupınar Üniversitesi"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvProfilGercekAdi" />
+            app:layout_constraintTop_toBottomOf="@+id/tvProfilGercekAdi"
+            tools:visibility="gone" />
 
         <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
             android:id="@+id/bottomNavigationView"
@@ -210,7 +210,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible">
 
     </FrameLayout>
 
