--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -117,11 +117,8 @@
                 android:layout_width="96dp"
                 android:layout_height="96dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="8dp"
                 android:src="@drawable/ic_profile"
                 app:civ_border_color="@color/golgelik"
                 app:civ_border_width="1dp"
@@ -130,7 +127,7 @@
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.033" />
+                app:layout_constraintVertical_bias="0.022" />
 
             <TextView
                 android:id="@+id/textView11"
@@ -146,7 +143,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
             <EditText
-                android:id="@+id/editText5"
+                android:id="@+id/etUserName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -161,7 +158,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/etProfileName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -187,10 +184,10 @@
                 android:textColor="#3C3F41"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editText" />
+                app:layout_constraintTop_toBottomOf="@+id/etProfileName" />
 
             <EditText
-                android:id="@+id/editText4"
+                android:id="@+id/etUserBio"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -213,7 +210,18 @@
                 android:textColor="#000000"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editText5" />
+                app:layout_constraintTop_toBottomOf="@+id/etUserName" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@+id/textView12"
+                app:layout_constraintEnd_toEndOf="@+id/circleProfileImage"
+                app:layout_constraintStart_toStartOf="@+id/circleProfileImage"
+                app:layout_constraintTop_toTopOf="@+id/circleProfileImage"
+                app:layout_constraintVertical_bias="0.406" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
