--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -26,16 +26,18 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:background="#B6B2B2"
                 app:contentInsetStart="0dp">
 
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="#B6B2B2">
 
 
                     <ImageView
-                        android:id="@+id/imgCheck"
+                        android:id="@+id/imgDegisiklikleriKaydet"
                         android:layout_width="45dp"
                         android:layout_height="35dp"
                         android:layout_marginTop="8dp"
@@ -97,7 +99,7 @@
 
 
             <TextView
-                android:id="@+id/textView12"
+                android:id="@+id/tvFotoğrafiDegistir"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -140,7 +142,7 @@
                 android:textColor="#3C3F41"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView12" />
+                app:layout_constraintTop_toBottomOf="@+id/tvFotoğrafiDegistir" />
 
             <EditText
                 android:id="@+id/etUserName"
@@ -217,7 +219,7 @@
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@+id/textView12"
+                app:layout_constraintBottom_toTopOf="@+id/tvFotoğrafiDegistir"
                 app:layout_constraintEnd_toEndOf="@+id/circleProfileImage"
                 app:layout_constraintStart_toStartOf="@+id/circleProfileImage"
                 app:layout_constraintTop_toTopOf="@+id/circleProfileImage"
