--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -16,6 +16,8 @@
         android:id="@+id/ic_profile"
         android:icon="@drawable/ic_profile"
         android:title=""></item>
-
-
+    <item
+        android:id="@+id/ic_share"
+        android:icon="@drawable/ic_share"
+        android:title=""></item>
 </menu>
