--- a/app/src/main/res/layout/fragment_compress_loading.xml
+++ b/app/src/main/res/layout/fragment_compress_loading.xml
@@ -20,7 +20,7 @@
         android:id="@+id/tvBilgi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Yükleniyor.."
+        android:text="Sıkıştırılıyor.."
         android:textColor="#000000"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/progressBar2"
