--- a/app/src/main/res/layout/fragment_share_next.xml
+++ b/app/src/main/res/layout/fragment_share_next.xml
@@ -91,7 +91,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/etPostAciklama"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@null"
